添加broccoli-concat-source-map包依赖

--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "broccoli-file-mover": "^0.3.5",
     "broccoli-file-remover": "~0.2.2",
     "broccoli-jshint": "^0.5.1",
+    "broccoli-kitchen-sink-helpers": "^0.2.4",
     "broccoli-merge-trees": "^0.1.3",
     "broccoli-sane-watcher": "0.0.5",
     "broccoli-static-compiler": "^0.1.4",
@@ -116,7 +117,9 @@
     "js-string-escape": "^1.0.0",
     "leek": "0.0.6",
     "lodash-node": "^2.4.1",
+    "merge": "^1.1.3",
     "minimatch": "^0.3.0",
+    "mkdirp": "^0.5.0",
     "ncp": "~0.6.0",
     "nopt": "^3.0.1",
     "npm": "^1.4.6",
@@ -128,6 +131,7 @@
     "rimraf": "^2.2.8",
     "rsvp": "^3.0.9",
     "semver": "^2.3.1",
+    "source-map": "^0.1.37",
     "testem": "^0.6.15",
     "through": "^2.3.4",
     "tiny-lr": "0.0.8",
